[gd_scene load_steps=12 format=3 uid="uid://b7v7ddihhufc3"]

[ext_resource type="Script" uid="uid://i20n6ku8iy5v" path="res://addons/fpsrpg_controller/player.gd" id="1"]
[ext_resource type="Script" uid="uid://c72oyuju4lp25" path="res://addons/fpsrpg_controller/HUD.gd" id="2_3y5t6"]
[ext_resource type="AudioStream" uid="uid://1adwfsldpeqs" path="res://addons/fpsrpg_controller/sfx/snap.ogg" id="3_aa11l"]
[ext_resource type="PackedScene" uid="uid://c5p8hchuic3ed" path="res://addons/fpsrpg_controller/equipped.tscn" id="5_yhe1a"]
[ext_resource type="PackedScene" uid="uid://pyi3khqxetpk" path="res://addons/fpsrpg_controller/inventory.tscn" id="6_axg0w"]
[ext_resource type="Script" uid="uid://5d1okwfswone" path="res://addons/fpsrpg_controller/questlog.gd" id="7_a0i7b"]
[ext_resource type="PackedScene" uid="uid://ce002723oqobr" path="res://addons/fpsrpg_controller/item_slot.tscn" id="8_6rfk8"]
[ext_resource type="Theme" uid="uid://p4jp3wkv06tq" path="res://addons/menus/tcg.tres" id="8_kbxqm"]
[ext_resource type="Script" uid="uid://db0ct40egj7ue" path="res://addons/fpsrpg_controller/game_menu.gd" id="8_sq0p4"]
[ext_resource type="AudioStream" uid="uid://bkb4ln1ntblmu" path="res://addons/fpsrpg_controller/sfx/ding.ogg" id="9_6k6ct"]

[sub_resource type="CapsuleShape3D" id="3"]
radius = 0.490116
height = 3.0

[node name="player" type="CharacterBody3D" groups=["Persist", "player"]]
script = ExtResource("1")

[node name="camera" type="Camera3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 9.53674e-07, 2.10365, 5.96046e-08)
cull_mask = 2148532223
current = true
fov = 90.0
far = 10000.0

[node name="HUD" type="CanvasLayer" parent="camera"]
process_mode = 3
script = ExtResource("2_3y5t6")

[node name="sights" type="Node2D" parent="camera/HUD"]
visible = false

[node name="Line2D" type="Line2D" parent="camera/HUD/sights"]
z_index = 3
position = Vector2(-533, -274)
rotation = -1.23279
points = PackedVector2Array(-246.863, 145.068, -85.7383, 592.219, -69.3421, 637.722, 98.5878, 1103.76)
default_color = Color(0, 0, 0, 1)

[node name="Line2D2" type="Line2D" parent="camera/HUD/sights"]
z_index = 3
position = Vector2(-535, -274)
points = PackedVector2Array(546, 655, 537, -22)
default_color = Color(0, 0, 0, 1)

[node name="Polygon2D" type="Polygon2D" parent="camera/HUD/sights/Line2D2"]
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(110, 599, 367, 704, 576, 693, 903, 623, 1101, 527, 1141, 265, 1076, 44, 858, -134, 627, -187, 263, -173, 54.9999, -102, -132, 25, -101, 270, -24.0001, 451, 67.9999, 574, -417, 1260, -694, 615, -564, -81, -366, -383, 279, -389, 978, -395, 1467, -338, 1767, -242, 2010, 103, 2013, 519, 2013, 827, 1934, 1062, 1775, 1229, 1150, 1379, 814, 1387, 251, 1410, -148, 1396, -369, 1351, -380, 1271)

[node name="Polygon2D" type="Polygon2D" parent="camera/HUD/sights/Line2D2/Polygon2D"]
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(-35.0001, 471, 146, 660, -380, 1365, -516, 1229)

[node name="crosshair" type="Polygon2D" parent="camera/HUD"]
position = Vector2(-5.96046e-08, 5.96046e-08)
scale = Vector2(2, 2)
color = Color(1, 0, 0, 1)
polygon = PackedVector2Array(0, -1, 1, 0, 0, 1, -1, 0)

[node name="status" type="RichTextLabel" parent="camera/HUD"]
offset_left = 6.0
offset_top = 158.0
offset_right = 932.0
offset_bottom = 678.0
mouse_filter = 2

[node name="undercross" type="RichTextLabel" parent="camera/HUD"]
offset_left = 735.0
offset_top = 574.0
offset_right = 1188.0
offset_bottom = 797.0
text = "
"

[node name="quest_tracker" type="Control" parent="camera/HUD"]
layout_mode = 3
anchors_preset = 0
offset_left = 893.0
offset_top = 25.0
offset_right = 933.0
offset_bottom = 65.0

[node name="title" type="RichTextLabel" parent="camera/HUD/quest_tracker"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 27.53
anchor_bottom = 15.447
offset_left = -35.0
offset_top = -42.0
offset_right = -777.2
offset_bottom = -599.88
grow_horizontal = 0
grow_vertical = 2
theme = ExtResource("8_kbxqm")
text = "QUEST TITLE"

[node name="description" type="RichTextLabel" parent="camera/HUD/quest_tracker"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 27.53
anchor_bottom = 15.447
offset_left = -34.0
offset_top = -15.0
offset_right = -831.2
offset_bottom = -454.88
grow_horizontal = 0
grow_vertical = 2
theme = ExtResource("8_kbxqm")
theme_override_font_sizes/normal_font_size = 32
text = "Collect 0/8 eggs.
"

[node name="interact_cast" type="RayCast3D" parent="camera"]
target_position = Vector3(0, 0, -4000)
collision_mask = 2
collide_with_areas = true

[node name="sfx" type="AudioStreamPlayer" parent="camera/interact_cast"]
stream = ExtResource("3_aa11l")

[node name="hand" parent="camera" instance=ExtResource("5_yhe1a")]

[node name="hat" parent="camera" instance=ExtResource("5_yhe1a")]
transform = Transform3D(0.999841, -1.54521e-09, 0.0178538, 0.000318136, 0.999841, -0.017816, -0.0178509, 0.0178189, 0.999682, 0.0235594, 0.564326, 0.00839019)

[node name="cloak" parent="camera" instance=ExtResource("5_yhe1a")]
transform = Transform3D(0.999841, -1.54521e-09, 0.0178538, 0.000318136, 0.999841, -0.017816, -0.0178509, 0.0178189, 0.999682, 0.0235593, -0.893771, 0.770513)

[node name="shoes" parent="camera" instance=ExtResource("5_yhe1a")]
transform = Transform3D(0.999841, -1.54521e-09, 0.0178538, 0.000318136, 0.999841, -0.017816, -0.0178509, 0.0178189, 0.999682, 0.0235594, -2.3359, -0.0858629)

[node name="cs" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.657689, 0)
shape = SubResource("3")

[node name="inventory" parent="." instance=ExtResource("6_axg0w")]

[node name="view" parent="inventory" index="0"]
process_mode = 3
offset_right = 55.0
offset_bottom = 535.0

[node name="select_box" parent="inventory/view/hotbar" index="0"]
offset_top = 26.0

[node name="game_menu" type="TabBar" parent="."]
process_mode = 3
offset_left = 55.0
offset_top = 36.0
offset_right = 400.0
offset_bottom = 94.0
theme = ExtResource("8_kbxqm")
current_tab = 1
clip_tabs = false
scrolling_enabled = false
tab_count = 2
tab_0/title = "Quests"
tab_1/title = "Inventory"
script = ExtResource("8_sq0p4")

[node name="Inventory" type="Panel" parent="game_menu"]
layout_mode = 0
offset_top = 59.0
offset_right = 812.0
offset_bottom = 492.0

[node name="hat" parent="game_menu/Inventory" groups=["equipment_slot"] instance=ExtResource("8_6rfk8")]
layout_mode = 0
offset_left = 131.0
offset_top = 20.0
offset_right = 193.0
offset_bottom = 83.0

[node name="Label" type="Label" parent="game_menu/Inventory/hat"]
layout_mode = 0
offset_left = -70.0
offset_top = 17.0
offset_right = -10.0
offset_bottom = 55.0
text = "HAT:"

[node name="cloak" parent="game_menu/Inventory" groups=["equipment_slot"] instance=ExtResource("8_6rfk8")]
layout_mode = 0
offset_left = 130.0
offset_top = 91.0
offset_right = 192.0
offset_bottom = 154.0

[node name="Label" type="Label" parent="game_menu/Inventory/cloak"]
layout_mode = 0
offset_left = -104.0
offset_top = 16.0
offset_right = -8.0
offset_bottom = 54.0
text = "CLOAK:"

[node name="shoes" parent="game_menu/Inventory" groups=["equipment_slot"] instance=ExtResource("8_6rfk8")]
layout_mode = 0
offset_left = 131.0
offset_top = 163.0
offset_right = 193.0
offset_bottom = 226.0

[node name="Label" type="Label" parent="game_menu/Inventory/shoes"]
layout_mode = 0
offset_left = -104.0
offset_top = 16.0
offset_right = -8.0
offset_bottom = 54.0
text = "SHOES:"

[node name="1" parent="game_menu/Inventory" instance=ExtResource("8_6rfk8")]
layout_mode = 0
offset_left = 302.0
offset_top = 20.0
offset_right = 364.0
offset_bottom = 83.0

[node name="2" parent="game_menu/Inventory" instance=ExtResource("8_6rfk8")]
layout_mode = 0
offset_left = 369.0
offset_top = 20.0
offset_right = 431.0
offset_bottom = 83.0

[node name="3" parent="game_menu/Inventory" instance=ExtResource("8_6rfk8")]
layout_mode = 0
offset_left = 441.0
offset_top = 20.0
offset_right = 503.0
offset_bottom = 83.0

[node name="4" parent="game_menu/Inventory" instance=ExtResource("8_6rfk8")]
layout_mode = 0
offset_left = 513.0
offset_top = 20.0
offset_right = 575.0
offset_bottom = 83.0

[node name="5" parent="game_menu/Inventory" instance=ExtResource("8_6rfk8")]
layout_mode = 0
offset_left = 585.0
offset_top = 20.0
offset_right = 647.0
offset_bottom = 83.0

[node name="6" parent="game_menu/Inventory" instance=ExtResource("8_6rfk8")]
layout_mode = 0
offset_left = 657.0
offset_top = 20.0
offset_right = 719.0
offset_bottom = 83.0

[node name="7" parent="game_menu/Inventory" instance=ExtResource("8_6rfk8")]
layout_mode = 0
offset_left = 729.0
offset_top = 20.0
offset_right = 791.0
offset_bottom = 83.0

[node name="8" parent="game_menu/Inventory" instance=ExtResource("8_6rfk8")]
layout_mode = 0
offset_left = 302.0
offset_top = 91.0
offset_right = 364.0
offset_bottom = 154.0

[node name="9" parent="game_menu/Inventory" instance=ExtResource("8_6rfk8")]
layout_mode = 0
offset_left = 369.0
offset_top = 91.0
offset_right = 431.0
offset_bottom = 154.0

[node name="10" parent="game_menu/Inventory" instance=ExtResource("8_6rfk8")]
layout_mode = 0
offset_left = 441.0
offset_top = 91.0
offset_right = 503.0
offset_bottom = 154.0

[node name="11" parent="game_menu/Inventory" instance=ExtResource("8_6rfk8")]
layout_mode = 0
offset_left = 513.0
offset_top = 91.0
offset_right = 575.0
offset_bottom = 154.0

[node name="12" parent="game_menu/Inventory" instance=ExtResource("8_6rfk8")]
layout_mode = 0
offset_left = 585.0
offset_top = 91.0
offset_right = 647.0
offset_bottom = 154.0

[node name="13" parent="game_menu/Inventory" instance=ExtResource("8_6rfk8")]
layout_mode = 0
offset_left = 657.0
offset_top = 91.0
offset_right = 719.0
offset_bottom = 154.0

[node name="14" parent="game_menu/Inventory" instance=ExtResource("8_6rfk8")]
layout_mode = 0
offset_left = 729.0
offset_top = 91.0
offset_right = 791.0
offset_bottom = 154.0

[node name="15" parent="game_menu/Inventory" instance=ExtResource("8_6rfk8")]
layout_mode = 0
offset_left = 302.0
offset_top = 163.0
offset_right = 364.0
offset_bottom = 226.0

[node name="16" parent="game_menu/Inventory" instance=ExtResource("8_6rfk8")]
layout_mode = 0
offset_left = 370.0
offset_top = 163.0
offset_right = 432.0
offset_bottom = 226.0

[node name="17" parent="game_menu/Inventory" instance=ExtResource("8_6rfk8")]
layout_mode = 0
offset_left = 441.0
offset_top = 163.0
offset_right = 503.0
offset_bottom = 226.0

[node name="18" parent="game_menu/Inventory" instance=ExtResource("8_6rfk8")]
layout_mode = 0
offset_left = 513.0
offset_top = 163.0
offset_right = 575.0
offset_bottom = 226.0

[node name="19" parent="game_menu/Inventory" instance=ExtResource("8_6rfk8")]
layout_mode = 0
offset_left = 585.0
offset_top = 163.0
offset_right = 647.0
offset_bottom = 226.0

[node name="20" parent="game_menu/Inventory" instance=ExtResource("8_6rfk8")]
layout_mode = 0
offset_left = 657.0
offset_top = 163.0
offset_right = 719.0
offset_bottom = 226.0

[node name="21" parent="game_menu/Inventory" instance=ExtResource("8_6rfk8")]
layout_mode = 0
offset_left = 729.0
offset_top = 163.0
offset_right = 791.0
offset_bottom = 226.0

[node name="Quests" type="Panel" parent="game_menu"]
visible = false
layout_mode = 0
offset_top = 58.0
offset_right = 843.0
offset_bottom = 479.0
script = ExtResource("7_a0i7b")
inventory = NodePath("../../inventory")

[node name="quest_complete_sfx" type="AudioStreamPlayer" parent="game_menu/Quests"]
stream = ExtResource("9_6k6ct")

[node name="list" type="ItemList" parent="game_menu/Quests"]
layout_mode = 2
offset_left = 8.0
offset_top = 5.0
offset_right = 243.0
offset_bottom = 413.0
size_flags_horizontal = 0

[node name="description" type="RichTextLabel" parent="game_menu/Quests"]
layout_mode = 2
offset_left = 256.0
offset_top = 5.0
offset_right = 832.0
offset_bottom = 405.0
size_flags_horizontal = 8
text = "<alan please add Placeholder text>"

[connection signal="item_picked_up" from="inventory" to="game_menu/Quests" method="item_picked_up"]
[connection signal="selection_changed" from="inventory/view/hotbar" to="camera/hand" method="selection_changed"]
[connection signal="item_changed" from="game_menu/Inventory/hat" to="camera/hat" method="selection_changed"]

[editable path="inventory"]
